--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,7 @@
   border: solid transparent 1px;
   padding: 3px 13px;
   cursor: pointer;
+  transition: border 0.5s;
 }
 
 button:disabled {
@@ -183,6 +184,10 @@ button:disabled {
   margin-block-end: 10px;
 }
 
+.paragraph:not(:last-child) {
+  margin-block-end: 0.5rem;
+}
+
 .paragraph__text {
   color: var(--paragraph-font-color);
   font-size: 18px;
@@ -205,9 +210,8 @@ button:disabled {
 }
 
 .low__concentration__section {
-  grid-template-rows: 10% 90%;
-  row-gap: 18px;
-  margin-block-end: 82px;
+  row-gap: 20px;
+  margin-block-end: 80px;
 }
 
 .low__concentration__section .section__heading {
@@ -218,7 +222,7 @@ button:disabled {
   display: grid;
   grid-column: span 2;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 20px;
+  gap: 20px;
 }
 
 .adviсes__section {
@@ -345,11 +349,6 @@ button:disabled {
 
   .low__concentration__section .section__heading {
     max-inline-size: 236px;
-  }
-
-  .low__concentration__section {
-    row-gap: 24px;
-    margin-block-end: 77px;
   }
 
   .low__concentration__section .list {
